implement changing of profile picture
